update filter number

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -23,7 +23,7 @@
         <ion-row>
             <ion-col>
                 <div>Current Point</div>
-                <div class="number-p">{{info.currentpoint}}</div>
+                <div class="number-p">{{info.currentpoint | number}}</div>
             </ion-col>
             <ion-col class="mid-col">
                 <div>Total Matches</div>
