--- a/src/pages/ranking/ranking.html
+++ b/src/pages/ranking/ranking.html
@@ -21,7 +21,7 @@
                 <div>
                     <h2>John Doe</h2>
                 </div>
-                <div class="point-side">50000</div>
+                <div class="point-side">{{50000 | number}}</div>
             </div>
         </ion-item>
         <ion-item>
@@ -32,7 +32,7 @@
                 <div>
                     <h2>John Doe</h2>
                 </div>
-                <div class="point-side">50000</div>
+                <div class="point-side">{{50000 | number}}</div>
             </div>
         </ion-item>
         <ion-item>
@@ -43,7 +43,7 @@
                 <div>
                     <h2>John Doe</h2>
                 </div>
-                <div class="point-side">50000</div>
+                <div class="point-side">{{50000 | number}}</div>
             </div>
         </ion-item>
         <ion-item>
@@ -54,7 +54,7 @@
                 <div>
                     <h2>John Doe</h2>
                 </div>
-                <div class="point-side">50000</div>
+                <div class="point-side">{{50000 | number}}</div>
             </div>
         </ion-item>
         <ion-item>
@@ -65,7 +65,7 @@
                 <div>
                     <h2>John Doe</h2>
                 </div>
-                <div class="point-side">50000</div>
+                <div class="point-side">{{50000 | number}}</div>
             </div>
         </ion-item>
     </ion-list>
@@ -74,7 +74,7 @@
     <ion-toolbar>
         <ion-title>
             <div>Your Rank: 127</div>
-            <div>10000</div>
+            <div>{{120000 | number}}</div>
         </ion-title>
     </ion-toolbar>
 </ion-footer>
