--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,16 +3,10 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title class="head-title">SmartBet</ion-title>
     </ion-navbar>
 </ion-header>
 
-<ion-content padding class="home-content">
-    <div class="logo-side">
-        <img src="./assets/images/icons/log-logo.png" alt="">
-    </div>
-    <div class="button-bet">
-        <div (click)="goToLogin()" class="text-bet">Login</div>
-    </div>
+<ion-content padding>
+   
 
 </ion-content>
