--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,10 +3,36 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
+        <ion-title class="head-title">List Matches</ion-title>
     </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-   
-
+<ion-content class="home-content">
+    <ion-item-group class="group-item" *ngFor="let match of grouplistMatches">
+        <ion-item-divider color="light" class="date-start">{{ match.date | date:'dd/MM/yyyy'}}</ion-item-divider>
+        <ion-item *ngFor="let item of match.data">
+            <div class="time">{{item.date| date:'HH:mm'}}</div>
+            <ion-row class="team-vs">
+                <ion-col class="col-name">
+                    <div>{{item.teamHome.teamName}}</div>
+                </ion-col>
+                <ion-col>
+                    <div class="logo">
+                        <img [src]="item.teamHome.picture" alt="">
+                    </div>
+                </ion-col>
+                <ion-col>
+                    <div>-</div>
+                </ion-col>
+                <ion-col>
+                    <div class="logo">
+                        <img [src]="item.teamAway.picture" alt="">
+                    </div>
+                </ion-col>
+                <ion-col class="col-name">
+                    <div>{{item.teamAway.teamName}}</div>
+                </ion-col>
+            </ion-row>
+        </ion-item>
+    </ion-item-group>
 </ion-content>
